# Razvaluha

./: Pipfile  README  autobuild.xml
indra/: CMakeLists.txt
indra/cmake/: 00-Common.cmake  APR.cmake  Abseil-CPP.cmake  Abseil.cmake  Audio.cmake  Boost.cmake  BuildVersion.cmake  CEFPlugin.cmake  CMakeLists.txt  CURL.cmake  CXXFeatureDetection.cmake  CheckPython.cmake  Copy3rdPartyLibs.cmake  CrashPad.cmake  DeploySharedLibs.cmake  EXPAT.cmake  FMODSTUDIO.cmake  FindFMODSTUDIO.cmake  FindHunSpell.cmake  FindURIPARSER.cmake  FindXmlRpcEpi.cmake  FreeType.cmake  GLEXT.cmake  GLOD.cmake  GStreamer010Plugin.cmake  Glut.cmake  GoogleBreakpad.cmake  GooglePerfTools.cmake  Hunspell.cmake  JPEG.cmake  LLAddBuildTest.cmake  LLCommon.cmake  LLMessage.cmake  LLPrimitive.cmake  LLRender.cmake  LLSharedLibs.cmake  LLWindow.cmake  LibVLCPlugin.cmake  LibXML2.cmake  Linking.cmake  (+17 more)
indra/libopenjpeg/: mct.c
indra/libpathing/: CMakeLists.txt
indra/linux_crash_logger/: CMakeLists.txt
indra/llappearance/: CMakeLists.txt  llavatarappearance.cpp  llavatarappearance.h  (+24 more)
indra/media_plugins/: CMakeLists.txt
indra/media_plugins/base/: CMakeLists.txt
indra/media_plugins/cef/: CMakeLists.txt  linux_volume_catcher.cpp  mac_volume_catcher.cpp  media_plugin_cef.cpp  windows_volume_catcher.cpp
indra/media_plugins/example/: media_plugin_example.cpp
indra/media_plugins/gstreamer010/: media_plugin_gstreamer010.cpp
indra/media_plugins/libvlc/: CMakeLists.txt  media_plugin_libvlc.cpp
scripts/: packages-formatter.py  setup-path.py  template_verifier.py  update_source_contributors.py
(+989 files in other folders)
